app/manifests/deployment-with-pong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-nuke-deployment

spec:
  replicas: 3
  selector:
    matchLabels:
      app: the-nuke-pod # must be the same as
  template:
    metadata:
      labels:
        app: the-nuke-pod # this
    spec:
      containers:
        - name: ssh-nuke-app
          image: pimpbot9000/ssh-nuke-app:ubuntu      
        - name: pong-app
          image: pimpbot9000/pong-app:ubuntu
