app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssh-nuke-deployment

spec:
  replicas: 3
  selector:
    matchLabels:
      app: ssh-nuke-app
  template:
    metadata:
      labels:
        app: ssh-nuke-app
    spec:
      containers:
        - name: ssh-nuke-app
          image: pimpbot9000/ssh-nuke-app:ubuntu
